--- a/config/services.yaml
+++ b/config/services.yaml
@@ -24,5 +24,9 @@ services:
             - '../src/Entity/'
             - '../src/Kernel.php'
 
+    App\Twig\AppExtension:
+        arguments:
+            $locale: '%locale%'
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
