--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
     "devDependencies": {
         "@hotwired/stimulus": "^3.0.0",
         "@symfony/stimulus-bridge": "^3.0.0",
-        "@symfony/webpack-encore": "^1.7.0",
+        "@symfony/webpack-encore": "^1.8.2",
         "core-js": "^3.0.0",
+        "jquery": "^3.6.0",
         "regenerator-runtime": "^0.13.2",
         "webpack-notifier": "^1.6.0"
     },
@@ -14,5 +15,11 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress"
+    },
+    "dependencies": {
+        "@popperjs/core": "^2.11.5",
+        "bootstrap": "^5.1.3",
+        "holderjs": "^2.9.9",
+        "popper.js": "^1.16.1"
     }
 }
